# python-project-49

./: .README.md.swp  .gitignore  Makefile  README.md  demo.cast  pyproject.toml
brain_games/: cli.py  consts.py  engine.py  for_brain_even.py  utils.py
brain_games/games/: calc.py  consts.py  engine.py  even.py  for_all_games.py  for_brain_calc.py  for_brain_even.py  for_brain_gcd.py  for_brain_prime.py  for_brain_progression.py  gcd.py  prime.py  progression.py  random_number.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
